// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button respects block prop 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-block="block"
  data-variant="default"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Block
    </span>
  </span>
</button>
`;

exports[`Button respects the alignContent prop 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-variant="default"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="start"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Align start
    </span>
  </span>
</button>
`;

exports[`Button respects the large size prop 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-size="large"
  data-variant="default"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button respects the small size prop 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-size="small"
  data-variant="default"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button styles danger button appropriately 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-variant="danger"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Danger
    </span>
  </span>
</button>
`;

exports[`Button styles invisible button appropriately 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-variant="invisible"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Invisible
    </span>
  </span>
</button>
`;

exports[`Button styles primary button appropriately 1`] = `
.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid;
  outline-offset: -2px;
}

<button
  class="c0 ButtonBase"
  data-variant="primary"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      data-component="text"
    >
      Primary
    </span>
  </span>
</button>
`;
